permutation test finished'

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1974,8 +1974,63 @@
       "Running iteration 10 in 1.3743243217468262 seconds\n",
       "Running iteration 20 in 1.4126698970794678 seconds\n",
       "Running iteration 30 in 1.2446925640106201 seconds\n",
-      "Running iteration 40 in 1.2469680309295654 seconds\n"
+      "Running iteration 40 in 1.2469680309295654 seconds\n",
+      "Running iteration 50 in 1.445005178451538 seconds\n",
+      "Running iteration 60 in 1.532149076461792 seconds\n",
+      "Running iteration 70 in 1.445889949798584 seconds\n",
+      "Running iteration 80 in 1.2538790702819824 seconds\n",
+      "Running iteration 90 in 1.237877607345581 seconds\n",
+      "Running iteration 100 in 1.2599399089813232 seconds\n",
+      "Running iteration 110 in 1.2578270435333252 seconds\n",
+      "Running iteration 120 in 1.2381296157836914 seconds\n",
+      "Running iteration 130 in 1.222649335861206 seconds\n",
+      "Running iteration 140 in 1.2401618957519531 seconds\n",
+      "Running iteration 150 in 1.277634859085083 seconds\n",
+      "Running iteration 160 in 1.267657995223999 seconds\n",
+      "Running iteration 170 in 1.259214162826538 seconds\n",
+      "Running iteration 180 in 1.2652955055236816 seconds\n",
+      "Running iteration 190 in 1.406944751739502 seconds\n",
+      "Running iteration 200 in 1.2818067073822021 seconds\n",
+      "Running iteration 210 in 1.2311639785766602 seconds\n",
+      "Running iteration 220 in 1.212587833404541 seconds\n",
+      "Running iteration 230 in 1.284080982208252 seconds\n",
+      "Running iteration 240 in 1.2428734302520752 seconds\n",
+      "Running iteration 250 in 1.2580459117889404 seconds\n",
+      "Running iteration 260 in 1.346733808517456 seconds\n",
+      "Running iteration 270 in 1.2739367485046387 seconds\n",
+      "Running iteration 280 in 1.2930536270141602 seconds\n",
+      "Running iteration 290 in 1.3558354377746582 seconds\n",
+      "Running iteration 300 in 1.3006255626678467 seconds\n",
+      "Running iteration 310 in 1.5573465824127197 seconds\n",
+      "Running iteration 320 in 1.8429014682769775 seconds\n",
+      "Running iteration 330 in 1.6232059001922607 seconds\n",
+      "Running iteration 340 in 1.35390043258667 seconds\n",
+      "Running iteration 350 in 1.424698829650879 seconds\n",
+      "Running iteration 360 in 1.61228346824646 seconds\n",
+      "Running iteration 370 in 1.2426233291625977 seconds\n",
+      "Running iteration 380 in 1.227705955505371 seconds\n",
+      "Running iteration 390 in 1.257002830505371 seconds\n",
+      "Running iteration 400 in 1.2405648231506348 seconds\n",
+      "Running iteration 410 in 1.2432563304901123 seconds\n",
+      "Running iteration 420 in 1.279952049255371 seconds\n",
+      "Running iteration 430 in 1.2944037914276123 seconds\n",
+      "Running iteration 440 in 1.3097050189971924 seconds\n",
+      "Running iteration 450 in 1.2945873737335205 seconds\n",
+      "Running iteration 460 in 1.3037550449371338 seconds\n",
+      "Running iteration 470 in 1.5065152645111084 seconds\n",
+      "Running iteration 480 in 1.4011695384979248 seconds\n",
+      "Running iteration 490 in 1.230471134185791 seconds\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MannwhitneyuResult(statistic=0.0, pvalue=2.9240514016712149e-165)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2078,14 +2133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.497708618331\n"
+      "0.500515731874\n"
      ]
     }
    ],
@@ -2096,14 +2151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.845360237118\n"
+      "0.844146374829\n"
      ]
     }
    ],
@@ -2114,21 +2169,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.443685067247\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(allF1_shuffle.mean())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.760594948904\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(allF1_true.mean())"
+   ]
   },
   {
    "cell_type": "code",
