added commetns to plotting code

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Machine Learning Pipeline\n",
-    "The work here expects that feature engineering has been applied to the data so all that needs to be done is reading in a data matrix and performing minimal preprocessing, feature selection, training, and performance metric ouptut. Everything is being done in a pipelien which runs straight from input to cv output, but I can fit it first and look at intermediate results if needed.\n",
+    "The work here expects that feature engineering has been applied to the data so all that needs to be done is reading in a data matrix and performing minimal preprocessing, feature selection, training, and performance metric ouptut. Everything is being done in a pipeline which runs straight from input to cv output, but I can fit it first and look at intermediate results if needed.\n",
     "## Notes\n",
     "\n",
     "## TODO\n",
