small changes to add in example run as well as adding feature importance csv and pkl data

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +54,143 @@
    "metadata": {},
    "source": [
     "# Search for the Best Model\n",
-    "Searching for the best model runs over all 14 datasets, and many feature selection/model tuning parameters so it can take a while. I suggest that you load the model from the pickle file which can be executed below."
+    "Searching for the best model runs over all 14 datasets, and many feature selection/model tuning parameters so it can take a while. I suggest that you load the model from the pickle file which can be executed below. \n",
+    "\n",
+    "\n",
+    "## Attention\n",
+    "Please note that the cell directly below this one iterates over datasets lebaled 11, and 12, while the next cell iterates over all datasets. Our project has focused on only datasets 11 and 12, but we have the capability/results to report on all datasets. If you're sure that you want to run the entire pipeline (which can take hours) run the second cell. Running only the first cell shouldn't take too long. After which you should load the original saved files to see all plotting of model performance. Even running on the smaller subset of data can take a while as there are many parameters to iterate over for hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running model search on data dataset_11_\n",
+      "performing grid search\n",
+      "X shape: (308, 2229)\n",
+      "Y positive examples: 145\n",
+      "Using 5 fold cv\n",
+      "Choosing the best model based on roc_auc\n",
+      "Gwas Cutoff [0.0]\n",
+      "Training logistic\n",
+      "For Model logistic:\n",
+      "\taccuracy: 0.74\n",
+      "\tf1: 0.666\n",
+      "\tprecision: 0.827\n",
+      "\trecall: 0.6\n",
+      "\troc_auc: 0.825\n",
+      "Best Model Parameters {'feature_union__gwasFeatures__gwasCutoff': 0.0, 'feature_union__linSVC_dimReduction__estimator__C': 0.25, 'feature_union__linSVC_dimReduction__threshold': 'mean', 'logistic__C': 1, 'logistic__penalty': 'l1'}\n",
+      "****************************************************************************************************\n",
+      "Training randomForest\n",
+      "For Model randomForest:\n",
+      "\taccuracy: 0.727\n",
+      "\tf1: 0.662\n",
+      "\tprecision: 0.808\n",
+      "\trecall: 0.594\n",
+      "\troc_auc: 0.825\n",
+      "Best Model Parameters {'RFC__criterion': 'gini', 'RFC__max_depth': None, 'RFC__max_features': 0.5, 'RFC__n_estimators': 20, 'feature_union__gwasFeatures__gwasCutoff': 0.0, 'feature_union__linSVC_dimReduction__estimator__C': 1, 'feature_union__linSVC_dimReduction__threshold': 1e-05}\n",
+      "****************************************************************************************************\n",
+      "Training SVC\n",
+      "For Model SVC:\n",
+      "\taccuracy: 0.656\n",
+      "\tf1: 0.587\n",
+      "\tprecision: 0.713\n",
+      "\trecall: 0.622\n",
+      "\troc_auc: 0.788\n",
+      "Best Model Parameters {'SVC__C': 10, 'SVC__kernel': 'rbf', 'feature_union__gwasFeatures__gwasCutoff': 0.0, 'feature_union__linSVC_dimReduction__estimator__C': 0.25, 'feature_union__linSVC_dimReduction__threshold': 'mean'}\n",
+      "****************************************************************************************************\n",
+      "Training GBTC\n",
+      "For Model GBTC:\n",
+      "\taccuracy: 0.721\n",
+      "\tf1: 0.652\n",
+      "\tprecision: 0.798\n",
+      "\trecall: 0.587\n",
+      "\troc_auc: 0.759\n",
+      "Best Model Parameters {'GBTC__learning_rate': 0.1, 'GBTC__max_depth': 3, 'GBTC__n_estimators': 50, 'feature_union__gwasFeatures__gwasCutoff': 0.0, 'feature_union__linSVC_dimReduction__estimator__C': 100, 'feature_union__linSVC_dimReduction__threshold': 0.25}\n",
+      "****************************************************************************************************\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Running model search on data dataset_12_\n",
+      "Using trainFile: data/MLData/pbr_ml_project _datasets_20180423/dataset_12_train.csv\n",
+      "valFile: data/MLData/pbr_ml_project _datasets_20180423/dataset_12_test.csv\n",
+      "gwasFile: data/MLData/pbr_ml_project _datasets_20180423/dataset_12_gwas.csv\n",
+      "(231, 2231)\n",
+      "(77, 2231)\n",
+      "GWAS summary stats\n",
+      "mean    0.044714\n",
+      "max     0.367965\n",
+      "min     0.004329\n",
+      "Name: corr_dat, dtype: float64\n",
+      "performing grid search\n",
+      "X shape: (308, 2229)\n",
+      "Y positive examples: 145\n",
+      "Training n = 231\n",
+      "Validation n = 77\n",
+      "Choosing the best model based on roc_auc\n",
+      "Gwas Cutoff [ 0.    0.05  0.1   0.15]\n",
+      "Training logistic\n",
+      "For Model logistic:\n",
+      "\taccuracy: 0.792\n",
+      "\tf1: 0.771\n",
+      "\tprecision: 0.75\n",
+      "\trecall: 0.794\n",
+      "\troc_auc: 0.875\n",
+      "Best Model Parameters {'feature_union__gwasFeatures__gwasCutoff': 0.15000000000000002, 'feature_union__linSVC_dimReduction__estimator__C': 10, 'feature_union__linSVC_dimReduction__threshold': 0.25, 'logistic__C': 1, 'logistic__penalty': 'l1'}\n",
+      "****************************************************************************************************\n",
+      "Training randomForest\n",
+      "For Model randomForest:\n",
+      "\taccuracy: 0.753\n",
+      "\tf1: 0.708\n",
+      "\tprecision: 0.742\n",
+      "\trecall: 0.676\n",
+      "\troc_auc: 0.864\n",
+      "Best Model Parameters {'RFC__criterion': 'gini', 'RFC__max_depth': None, 'RFC__max_features': 0.5, 'RFC__n_estimators': 10, 'feature_union__gwasFeatures__gwasCutoff': 0.0, 'feature_union__linSVC_dimReduction__estimator__C': 10, 'feature_union__linSVC_dimReduction__threshold': 'mean'}\n",
+      "****************************************************************************************************\n",
+      "Training SVC\n",
+      "For Model SVC:\n",
+      "\taccuracy: 0.753\n",
+      "\tf1: 0.708\n",
+      "\tprecision: 0.742\n",
+      "\trecall: 0.676\n",
+      "\troc_auc: 0.865\n",
+      "Best Model Parameters {'SVC__C': 10, 'SVC__kernel': 'rbf', 'feature_union__gwasFeatures__gwasCutoff': 0.15000000000000002, 'feature_union__linSVC_dimReduction__estimator__C': 100, 'feature_union__linSVC_dimReduction__threshold': 0.25}\n",
+      "****************************************************************************************************\n",
+      "Training GBTC\n",
+      "For Model GBTC:\n",
+      "\taccuracy: 0.792\n",
+      "\tf1: 0.771\n",
+      "\tprecision: 0.75\n",
+      "\trecall: 0.794\n",
+      "\troc_auc: 0.866\n",
+      "Best Model Parameters {'GBTC__learning_rate': 0.1, 'GBTC__max_depth': 1, 'GBTC__n_estimators': 300, 'feature_union__gwasFeatures__gwasCutoff': 0.15000000000000002, 'feature_union__linSVC_dimReduction__estimator__C': 10, 'feature_union__linSVC_dimReduction__threshold': 0.25}\n",
+      "****************************************************************************************************\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "allDataModelDict = {}\n",
+    "for i in range(11, 13):\n",
+    "    dataPath = \"data/MLData/pbr_ml_project _datasets_20180423/\"\n",
+    "    dataPrefix = \"dataset_{}_\".format(i)\n",
+    "    print(\"Running model search on data {}\".format(dataPrefix))\n",
+    "    allDataModelDict[dataPrefix] = performGridSearch(dataPath = dataPath, dataPrefix = dataPrefix)\n",
+    "    print(\"\\n\\n\\n\\n\\n\")"
    ]
   },
   {
@@ -852,6 +990,14 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotting performance results\n",
+    "Though you can run the model selectuion process on a subset of the datasets, and the code will work with any combination of datasets provided the right arguments are given, it is suggested to simply reload the saved pickle dictionary in order to plot all performance results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -867,7 +1013,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open(modelDictPicklePath, \"rb\") as pklFile:\n",
