correcting string paths to ML data file

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dataPath = \"data/MLData/pbr_ml_project _datasets_20180423/\"\n",
+    "dataPath = \"data/MLData/pbr_ml_project_datasets_20180423/\"\n",
     "# dataPrefix = \"dataset_2_\"\n",
     "modelDictPicklePath = \"data/modelDictMultiDataRun.pkl\""
    ]
@@ -59,6 +59,42 @@
     "\n",
     "## Attention\n",
     "Please note that the cell directly below this one iterates over datasets lebaled 11, and 12, while the next cell iterates over all datasets. Our project has focused on only datasets 11 and 12, but we have the capability/results to report on all datasets. If you're sure that you want to run the entire pipeline (which can take hours) run the second cell. Running only the first cell shouldn't take too long. After which you should load the original saved files to see all plotting of model performance. Even running on the smaller subset of data can take a while as there are many parameters to iterate over for hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running model search on data dataset_11_\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Unexpected item in bagging area. Have you unzipped the data file? Please refer to the README for information on running the ML notebook",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-da0514dd7f96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdataPrefix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"dataset_{}_\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Running model search on data {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataPrefix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mallDataModelDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdataPrefix\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mperformGridSearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataPath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataPrefix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataPrefix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\\n\\n\\n\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ob2285/Desktop/currentClasses/compGen_S18/finalProject/AMR_ML/src/mlPipeline/modelTraining.py\u001b[0m in \u001b[0;36mperformGridSearch\u001b[0;34m(dataPath, dataPrefix)\u001b[0m\n\u001b[1;32m    115\u001b[0m     \u001b[0;31m# print(relevantFiles)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m     \u001b[0massertStr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Unexpected item in bagging area. Have you unzipped the data file? Please refer to the README for information on running the ML notebook\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrelevantFiles\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0massertStr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m     \u001b[0mvalidationData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Unexpected item in bagging area. Have you unzipped the data file? Please refer to the README for information on running the ML notebook"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "allDataModelDict = {}\n",
+    "for i in range(11, 13):\n",
+    "    dataPath = \"data/MLData/pbr_ml_project_datasets_20180423/\"\n",
+    "    dataPrefix = \"dataset_{}_\".format(i)\n",
+    "    print(\"Running model search on data {}\".format(dataPrefix))\n",
+    "    allDataModelDict[dataPrefix] = performGridSearch(dataPath = dataPath, dataPrefix = dataPrefix)\n",
+    "    print(\"\\n\\n\\n\\n\\n\")"
    ]
   },
   {
@@ -186,7 +222,7 @@
     "\n",
     "allDataModelDict = {}\n",
     "for i in range(11, 13):\n",
-    "    dataPath = \"data/MLData/pbr_ml_project _datasets_20180423/\"\n",
+    "    dataPath = \"data/MLData/pbr_ml_project_datasets_20180423/\"\n",
     "    dataPrefix = \"dataset_{}_\".format(i)\n",
     "    print(\"Running model search on data {}\".format(dataPrefix))\n",
     "    allDataModelDict[dataPrefix] = performGridSearch(dataPath = dataPath, dataPrefix = dataPrefix)\n",
@@ -964,7 +1000,7 @@
     "\n",
     "allDataModelDict = {}\n",
     "for i in range(1, 15):\n",
-    "    dataPath = \"data/MLData/pbr_ml_project _datasets_20180423/\"\n",
+    "    dataPath = \"data/MLData/pbr_ml_project_datasets_20180423/\"\n",
     "    dataPrefix = \"dataset_{}_\".format(i)\n",
     "    print(\"Running model search on data {}\".format(dataPrefix))\n",
     "    allDataModelDict[dataPrefix] = performGridSearch(dataPath = dataPath, dataPrefix = dataPrefix)\n",
@@ -1389,7 +1425,7 @@
     "from collections import defaultdict\n",
     "modelName = \"logistic\"\n",
     "modelDict = allDataModelDict[\"dataset_12_\"][modelName]\n",
-    "dataPath = \"data/MLData/pbr_ml_project _datasets_20180423/dataset_12_train.csv\"\n",
+    "dataPath = \"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\"\n",
     "# modelDict = modelDictAll[\"GBTC\"]\n",
     "bestModel = modelDict[\"gridcv\"].best_estimator_\n",
     "bestModel = modelDict[\"gridcv\"].best_estimator_\n",
@@ -1487,14 +1523,14 @@
    "source": [
     "from sklearn.metrics import roc_auc_score, f1_score, recall_score, precision_score, confusion_matrix\n",
     "import copy\n",
-    "valDF = pd.read_csv(\"data/MLData/pbr_ml_project _datasets_20180423/dataset_12_test.csv\")\n",
+    "valDF = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_test.csv\")\n",
     "valDF = valDF.set_index(\"isolate\")\n",
     "X_df = valDF.drop(labels = [\"pbr_res\"], axis = 1)\n",
     "X_val = X_df.values\n",
     "Y_df = valDF[\"pbr_res\"]\n",
     "Y_val = Y_df.values \n",
     "\n",
-    "trainDF = pd.read_csv(\"data/MLData/pbr_ml_project _datasets_20180423/dataset_12_train.csv\")\n",
+    "trainDF = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\")\n",
     "trainDF = trainDF.set_index(\"isolate\")\n",
     "X_df = trainDF.drop(labels = [\"pbr_res\"], axis = 1)\n",
     "X_train = X_df.values\n",
@@ -1584,13 +1620,13 @@
    },
    "outputs": [],
    "source": [
-    "trainDF = pd.read_csv(\"data/MLData/pbr_ml_project _datasets_20180423/dataset_12_train.csv\")\n",
+    "trainDF = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\")\n",
     "# print(trainDF.shape)\n",
-    "valDF = pd.read_csv(\"data/MLData/pbr_ml_project _datasets_20180423/dataset_12_test.csv\")\n",
+    "valDF = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_test.csv\")\n",
     "# print(valDF.shape)\n",
     "allData = pd.concat([trainDF, valDF])\n",
     "\n",
-    "# df = pd.read_csv(\"data/MLData/pbr_ml_project _datasets_20180423/dataset_12_train.csv\")\n",
+    "# df = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\")\n",
     "allData = allData.set_index(\"isolate\")\n",
     "X_df = allData.drop(labels = [\"pbr_res\"], axis = 1)\n",
     "X = X_df.values\n",
@@ -2003,8 +2039,8 @@
    ],
    "source": [
     "from sklearn.metrics import roc_auc_score, f1_score, recall_score, precision_score, confusion_matrix\n",
-    "trainPath = \"data/MLData/pbr_ml_project _datasets_20180423/dataset_12_train.csv\"\n",
-    "valPath = \"data/MLData/pbr_ml_project _datasets_20180423/dataset_12_test.csv\"\n",
+    "trainPath = \"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\"\n",
+    "valPath = \"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_test.csv\"\n",
     "\n",
     "print(\"Using trainFile: {}\\nvalFile: {}\".format(trainPath, valPath))\n",
     "trainDF = pd.read_csv(trainPath)\n",
